--- a/services/app-service/app/assets/stylesheets/avatar/info.css
+++ b/services/app-service/app/assets/stylesheets/avatar/info.css
@@ -52,3 +52,15 @@
     max-width: 93%;
     opacity: 0.88;
 }
+
+@media (max-width: 600px) {
+    .avatar-info {
+        margin-left: 0;
+        margin-right: 0;
+        padding-left: 14px;
+        padding-right: 14px;
+        width: 100%;
+        max-width: 100vw;
+        box-sizing: border-box;
+    }
+}
